testsuite/poke.pkl/integers-diag-4.pk
/* { dg-do compile } */

var a =
  0o_; /* { dg-error "" } */
